@startuml
title <size: 30> US11 Class Diagram

skinparam linetype ortho

interface Sensor {

}



interface DomainID{
    + getID() : String
}

interface DomainEntity{
    +getID() : DomainID4
}

interface ValueObject<T> {
    + getValue() : T
}


class HumiditySensor{
    - sensorName : SensorNameVO
    - deviceID : DeviceIDVO
    - sensorTypeID : SensorTypeIDVO
    - sensorID : SensorIDVO

    + HumiditySensor(sensorName : SensorNameVO,deviceID : DeviceIDVO,sensorTypeID : SensorTypeIDVO)
    + getReading(simHardware : SimHardware) : ValueObject<Integer>
    + getSensorName() : SensorNameVO
    + getDeviceID() : DeviceIDVO
    + getSensorTypeID() : SensorTypeIDVO
    + getID() : SensorIDVO
}

class HumidityValue{
    - primitiveValue : int

    + HumidityValue(reading: String)
    + getValue() : Integer
}

class SimHardware{
    + getValue(): String
    + getValue(intialDate : String, finalDate : String) : String
}

class SensorNameVO{
    - sensorName : String
    + SensorNameVO(sensorName : String)
    + getValue() : String
}

class SensorIDVO{
    - identifier : UUID
    + SensorIDVO(identifier : UUID)
    + getID() : String
}


class SensorTypeIDVO{
    - sensorTypeID : String
    + SensorTypeIDVO(sensorTypeID : String)
    + getID() : String
}

class DeviceIDVO{
    - deviceID : UUID
    + DeviceIDVO(deviceID : UUID)
    + getID() : String
}

interface Sensor {
    + getSensorTypeID() : SensorTypeIDVO
    + getDeviceID() : DeviceIDVO
    + getSensorName() : SensorNameVO
}


Sensor <|.. HumiditySensor
SimHardware <.. HumiditySensor

SensorNameVO <.. HumiditySensor
SensorIDVO --* HumiditySensor
HumidityValue *--right HumiditySensor
SensorTypeIDVO <.. HumiditySensor
DeviceIDVO <.. HumiditySensor

ValueObject <|.. SensorNameVO
DomainID  <|.. SensorIDVO
DomainID  <|.. SensorTypeIDVO
DomainID  <|.. DeviceIDVO

ValueObject <|.. HumidityValue
Sensor --|> DomainEntity

@enduml